data/derived/comb/progs/unify/prog5280.ml.out
Characters 113-146:
  | Cosine e1 ->"cos(pi*" ^ exprToString e1 ^ ")"
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
